--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		}
 	},
 	"lint-staged": {
-		"./src/**/*.{ts,json,yml}": [
+		"*": [
+      "npm run test",
       "npm run prettier-write",
       "npm run lint-fix",
       "git add"
