--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,ts,json,md,yml}": [
+    "./src/**/*.{js,ts,json,md,yml}": [
       "npm run test",
       "npm run prettier-write",
       "npm run lint-fix",
